--- a/Modulo 6/index.html
+++ b/Modulo 6/index.html
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-      <a class="navbar-brand" href="index.html">MOOC</a>
+    <img class="img-circle img-responsive" src="./img/8.gif">
     </div>
     <div class="collapse navbar-collapse" id="miMenu">
       <ul class="nav navbar-nav">
@@ -55,7 +55,9 @@
       </a>
       </div>
       <div class="item">
+      <a href="calculadora_jquery.htm">
         <img src="images/slide4.png" alt="Calculadora" width="954" height="410">
+        </a>
       </div>       
       <div class="item">
         <img src="images/slide3.png" alt="Frases" width="954" height="410">
